k3s/workloads/testing/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testing
  labels:
    app: testing
spec:
  parentRefs:
    - name: prod-gateway
      kind: Gateway
  hostnames:
    - testing.pve.zagoapps.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: testing
          port: 80
